# libzippp

./: CMakeLists.txt
CMakeModules/: FindLibZip.cmake
src/: config.h.in  libzippp.cpp  libzippp.h
